Added login and logout functions

--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
         h1 Login
-        form(action="/users/register" method="POST")
+        form(action="/users/login" method="POST")
             #form-group
                 label Username:
                 input.form-control(type="text", name="username")
