--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,10 +17,14 @@ html
                     li.nav-item
                         a.nav-link(href='/articles/add') Add Article
                 ul.nav.navbar-nav.navbar-right
-                    li.nav-item  
-                        a.nav-link(href='/users/login') Login
-                    li.nav-item  
-                        a.nav-link(href='/users/register') Register
+                    if user
+                        li.nav-item
+                            a.nav-link(href='/users/logout') Logout
+                    else
+                        li.nav-item  
+                            a.nav-link(href='/users/login') Login
+                        li.nav-item  
+                            a.nav-link(href='/users/register') Register
 
         .container
             != messages('message', locals)
