--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,9 +13,9 @@ html
                 ul.navbar-nav.mr-auto
                     li.nav-item
                         a.nav-link(href='/') Home 
-                        span.sr-only (current)
-                    li.nav-item
-                        a.nav-link(href='/articles/add') Add Article
+                    if user
+                        li.nav-item
+                            a.nav-link(href='/articles/add') Add Article
                 ul.nav.navbar-nav.navbar-right
                     if user
                         li.nav-item
