--- a/views/login.pug
+++ b/views/login.pug
@@ -8,6 +8,6 @@ block content
                 input.form-control(type="text", name="username")
             #form-group
                 label Password:
-                input.form-control(type="text", name="password")
+                input.form-control(type="password", name="password")
             br
             input.btn.btn-primary(type="submit",value="Submit")
